Add patient routes to API docs
